src/antlr/logic/LogicParser.ts
// Generated from Logic.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { LogicListener } from "./LogicListener.js";
import { LogicVisitor } from "./LogicVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class LogicParser extends antlr.Parser {
    public static readonly TURNSTILE = 1;
    public static readonly IMPL = 2;
    public static readonly AND = 3;
    public static readonly OR = 4;
    public static readonly NOT = 5;
    public static readonly TOP = 6;
    public static readonly BOT = 7;
    public static readonly FORALL = 8;
    public static readonly EXISTS = 9;
    public static readonly DOT = 10;
    public static readonly LPAREN = 11;
    public static readonly RPAREN = 12;
    public static readonly COMMA = 13;
    public static readonly PRED = 14;
    public static readonly LOWERID = 15;
    public static readonly WS = 16;
    public static readonly RULE_sequent = 0;
    public static readonly RULE_assumptions = 1;
    public static readonly RULE_conclusion = 2;
    public static readonly RULE_formula = 3;
    public static readonly RULE_implication = 4;
    public static readonly RULE_quantifiedExpr = 5;
    public static readonly RULE_forall = 6;
    public static readonly RULE_exists = 7;
    public static readonly RULE_disjunction = 8;
    public static readonly RULE_conjunction = 9;
    public static readonly RULE_negation = 10;
    public static readonly RULE_atom = 11;
    public static readonly RULE_predicate = 12;
    public static readonly RULE_termList = 13;
    public static readonly RULE_term = 14;
    public static readonly RULE_variable = 15;
    public static readonly RULE_constant = 16;
    public static readonly RULE_functionApp = 17;

    public static readonly literalNames = [
        null, null, null, null, null, null, null, null, null, null, "'.'", 
        "'('", "')'", "','"
    ];

    public static readonly symbolicNames = [
        null, "TURNSTILE", "IMPL", "AND", "OR", "NOT", "TOP", "BOT", "FORALL", 
        "EXISTS", "DOT", "LPAREN", "RPAREN", "COMMA", "PRED", "LOWERID", 
        "WS"
    ];
    public static readonly ruleNames = [
        "sequent", "assumptions", "conclusion", "formula", "implication", 
        "quantifiedExpr", "forall", "exists", "disjunction", "conjunction", 
        "negation", "atom", "predicate", "termList", "term", "variable", 
        "constant", "functionApp",
    ];

    public get grammarFileName(): string { return "Logic.g4"; }
    public get literalNames(): (string | null)[] { return LogicParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return LogicParser.symbolicNames; }
    public get ruleNames(): string[] { return LogicParser.ruleNames; }
    public get serializedATN(): number[] { return LogicParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, LogicParser._ATN, LogicParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public sequent(): SequentContext {
        let localContext = new SequentContext(this.context, this.state);
        this.enterRule(localContext, 0, LogicParser.RULE_sequent);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 37;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 52192) !== 0)) {
                {
                this.state = 36;
                this.assumptions();
                }
            }

            this.state = 39;
            this.match(LogicParser.TURNSTILE);
            this.state = 41;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 52192) !== 0)) {
                {
                this.state = 40;
                this.conclusion();
                }
            }

            this.state = 43;
            this.match(LogicParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public assumptions(): AssumptionsContext {
        let localContext = new AssumptionsContext(this.context, this.state);
        this.enterRule(localContext, 2, LogicParser.RULE_assumptions);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 45;
            this.formula();
            this.state = 50;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 13) {
                {
                {
                this.state = 46;
                this.match(LogicParser.COMMA);
                this.state = 47;
                this.formula();
                }
                }
                this.state = 52;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public conclusion(): ConclusionContext {
        let localContext = new ConclusionContext(this.context, this.state);
        this.enterRule(localContext, 4, LogicParser.RULE_conclusion);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 53;
            this.formula();
            this.state = 58;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 13) {
                {
                {
                this.state = 54;
                this.match(LogicParser.COMMA);
                this.state = 55;
                this.formula();
                }
                }
                this.state = 60;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public formula(): FormulaContext {
        let localContext = new FormulaContext(this.context, this.state);
        this.enterRule(localContext, 6, LogicParser.RULE_formula);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 61;
            this.implication();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public implication(): ImplicationContext {
        let localContext = new ImplicationContext(this.context, this.state);
        this.enterRule(localContext, 8, LogicParser.RULE_implication);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 63;
            this.quantifiedExpr();
            this.state = 66;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 2) {
                {
                this.state = 64;
                this.match(LogicParser.IMPL);
                this.state = 65;
                this.implication();
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public quantifiedExpr(): QuantifiedExprContext {
        let localContext = new QuantifiedExprContext(this.context, this.state);
        this.enterRule(localContext, 10, LogicParser.RULE_quantifiedExpr);
        try {
            this.state = 71;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case LogicParser.FORALL:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 68;
                this.forall();
                }
                break;
            case LogicParser.EXISTS:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 69;
                this.exists();
                }
                break;
            case LogicParser.NOT:
            case LogicParser.TOP:
            case LogicParser.BOT:
            case LogicParser.LPAREN:
            case LogicParser.PRED:
            case LogicParser.LOWERID:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 70;
                this.disjunction();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public forall(): ForallContext {
        let localContext = new ForallContext(this.context, this.state);
        this.enterRule(localContext, 12, LogicParser.RULE_forall);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 73;
            this.match(LogicParser.FORALL);
            this.state = 74;
            this.variable();
            this.state = 75;
            this.match(LogicParser.DOT);
            this.state = 76;
            this.quantifiedExpr();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public exists(): ExistsContext {
        let localContext = new ExistsContext(this.context, this.state);
        this.enterRule(localContext, 14, LogicParser.RULE_exists);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 78;
            this.match(LogicParser.EXISTS);
            this.state = 79;
            this.variable();
            this.state = 80;
            this.match(LogicParser.DOT);
            this.state = 81;
            this.quantifiedExpr();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public disjunction(): DisjunctionContext {
        let localContext = new DisjunctionContext(this.context, this.state);
        this.enterRule(localContext, 16, LogicParser.RULE_disjunction);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 83;
            this.conjunction();
            this.state = 88;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 4) {
                {
                {
                this.state = 84;
                this.match(LogicParser.OR);
                this.state = 85;
                this.conjunction();
                }
                }
                this.state = 90;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public conjunction(): ConjunctionContext {
        let localContext = new ConjunctionContext(this.context, this.state);
        this.enterRule(localContext, 18, LogicParser.RULE_conjunction);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 91;
            this.negation();
            this.state = 96;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 3) {
                {
                {
                this.state = 92;
                this.match(LogicParser.AND);
                this.state = 93;
                this.negation();
                }
                }
                this.state = 98;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public negation(): NegationContext {
        let localContext = new NegationContext(this.context, this.state);
        this.enterRule(localContext, 20, LogicParser.RULE_negation);
        try {
            this.state = 102;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case LogicParser.NOT:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 99;
                this.match(LogicParser.NOT);
                this.state = 100;
                this.negation();
                }
                break;
            case LogicParser.TOP:
            case LogicParser.BOT:
            case LogicParser.LPAREN:
            case LogicParser.PRED:
            case LogicParser.LOWERID:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 101;
                this.atom();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public atom(): AtomContext {
        let localContext = new AtomContext(this.context, this.state);
        this.enterRule(localContext, 22, LogicParser.RULE_atom);
        try {
            this.state = 113;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 9, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 104;
                this.match(LogicParser.LPAREN);
                this.state = 105;
                this.formula();
                this.state = 106;
                this.match(LogicParser.RPAREN);
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 108;
                this.predicate();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 109;
                this.match(LogicParser.TOP);
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 110;
                this.match(LogicParser.BOT);
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 111;
                this.match(LogicParser.LOWERID);
                }
                break;
            case 6:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 112;
                this.match(LogicParser.PRED);
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public predicate(): PredicateContext {
        let localContext = new PredicateContext(this.context, this.state);
        this.enterRule(localContext, 24, LogicParser.RULE_predicate);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 115;
            this.match(LogicParser.PRED);
            this.state = 116;
            this.match(LogicParser.LPAREN);
            this.state = 118;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 11 || _la === 15) {
                {
                this.state = 117;
                this.termList();
                }
            }

            this.state = 120;
            this.match(LogicParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public termList(): TermListContext {
        let localContext = new TermListContext(this.context, this.state);
        this.enterRule(localContext, 26, LogicParser.RULE_termList);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 122;
            this.term();
            this.state = 127;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 13) {
                {
                {
                this.state = 123;
                this.match(LogicParser.COMMA);
                this.state = 124;
                this.term();
                }
                }
                this.state = 129;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public term(): TermContext {
        let localContext = new TermContext(this.context, this.state);
        this.enterRule(localContext, 28, LogicParser.RULE_term);
        try {
            this.state = 137;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 12, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 130;
                this.variable();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 131;
                this.constant();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 132;
                this.functionApp();
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 133;
                this.match(LogicParser.LPAREN);
                this.state = 134;
                this.term();
                this.state = 135;
                this.match(LogicParser.RPAREN);
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public variable(): VariableContext {
        let localContext = new VariableContext(this.context, this.state);
        this.enterRule(localContext, 30, LogicParser.RULE_variable);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 139;
            this.match(LogicParser.LOWERID);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public constant(): ConstantContext {
        let localContext = new ConstantContext(this.context, this.state);
        this.enterRule(localContext, 32, LogicParser.RULE_constant);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 141;
            this.match(LogicParser.LOWERID);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public functionApp(): FunctionAppContext {
        let localContext = new FunctionAppContext(this.context, this.state);
        this.enterRule(localContext, 34, LogicParser.RULE_functionApp);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 143;
            this.match(LogicParser.LOWERID);
            this.state = 144;
            this.match(LogicParser.LPAREN);
            this.state = 146;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 11 || _la === 15) {
                {
                this.state = 145;
                this.termList();
                }
            }

            this.state = 148;
            this.match(LogicParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }


    private static __ATN: antlr.ATN;
    public static get _ATN(): antlr.ATN {
        if (!LogicParser.__ATN) {
            LogicParser.__ATN = new antlr.ATNDeserializer().deserialize(LogicParser._serializedATN);
        }

        return LogicParser.__ATN;
    }


    private static readonly vocabulary = new antlr.Vocabulary(LogicParser.literalNames, LogicParser.symbolicNames, []);

    public override get vocabulary(): antlr.Vocabulary {
        return LogicParser.vocabulary;
    }

    private static readonly decisionsToDFA = LogicParser._ATN.decisionToState.map( (ds: antlr.DecisionState, index: number) => new antlr.DFA(ds, index) );
}

export class SequentContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public TURNSTILE(): antlr.TerminalNode {
        return this.getToken(LogicParser.TURNSTILE, 0)!;
    }
    public EOF(): antlr.TerminalNode {
        return this.getToken(LogicParser.EOF, 0)!;
    }
    public assumptions(): AssumptionsContext | null {
        return this.getRuleContext(0, AssumptionsContext);
    }
    public conclusion(): ConclusionContext | null {
        return this.getRuleContext(0, ConclusionContext);
    }
    public override get ruleIndex(): number {
        return LogicParser.RULE_sequent;
    }
    public override enterRule(listener: LogicListener): void {
        if(listener.enterSequent) {
             listener.enterSequent(this);
        }
    }
    public override exitRule(listener: LogicListener): void {
        if(listener.exitSequent) {
             listener.exitSequent(this);
        }
    }
    public override accept<Result>(visitor: LogicVisitor<Result>): Result | null {
        if (visitor.visitSequent) {
            return visitor.visitSequent(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class AssumptionsContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public formula(): FormulaContext[];
    public formula(i: number): FormulaContext | null;
    public formula(i?: number): FormulaContext[] | FormulaContext | null {
        if (i === undefined) {
            return this.getRuleContexts(FormulaContext);
        }

        return this.getRuleContext(i, FormulaContext);
    }
    public COMMA(): antlr.TerminalNode[];
    public COMMA(i: number): antlr.TerminalNode | null;
    public COMMA(i?: number): antlr.TerminalNode | null | antlr.TerminalNode[] {
    	if (i === undefined) {
    		return this.getTokens(LogicParser.COMMA);
    	} else {
    		return this.getToken(LogicParser.COMMA, i);
    	}
    }
    public override get ruleIndex(): number {
        return LogicParser.RULE_assumptions;
    }
    public override enterRule(listener: LogicListener): void {
        if(listener.enterAssumptions) {
             listener.enterAssumptions(this);
        }
    }
    public override exitRule(listener: LogicListener): void {
        if(listener.exitAssumptions) {
             listener.exitAssumptions(this);
        }
    }
    public override accept<Result>(visitor: LogicVisitor<Result>): Result | null {
        if (visitor.visitAssumptions) {
            return visitor.visitAssumptions(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class ConclusionContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public formula(): FormulaContext[];
    public formula(i: number): FormulaContext | null;
    public formula(i?: number): FormulaContext[] | FormulaContext | null {
        if (i === undefined) {
            return this.getRuleContexts(FormulaContext);
        }

        return this.getRuleContext(i, FormulaContext);
    }
    public COMMA(): antlr.TerminalNode[];
    public COMMA(i: number): antlr.TerminalNode | null;
    public COMMA(i?: number): antlr.TerminalNode | null | antlr.TerminalNode[] {
    	if (i === undefined) {
    		return this.getTokens(LogicParser.COMMA);
    	} else {
    		return this.getToken(LogicParser.COMMA, i);
    	}
    }
    public override get ruleIndex(): number {
        return LogicParser.RULE_conclusion;
    }
    public override enterRule(listener: LogicListener): void {
        if(listener.enterConclusion) {
             listener.enterConclusion(this);
        }
    }
    public override exitRule(listener: LogicListener): void {
        if(listener.exitConclusion) {
             listener.exitConclusion(this);
        }
    }
    public override accept<Result>(visitor: LogicVisitor<Result>): Result | null {
        if (visitor.visitConclusion) {
            return visitor.visitConclusion(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class FormulaContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public implication(): ImplicationContext {
        return this.getRuleContext(0, ImplicationContext)!;
    }
    public override get ruleIndex(): number {
        return LogicParser.RULE_formula;
    }
    public override enterRule(listener: LogicListener): void {
        if(listener.enterFormula) {
             listener.enterFormula(this);
        }
    }
    public override exitRule(listener: LogicListener): void {
        if(listener.exitFormula) {
             listener.exitFormula(this);
        }
    }
    public override accept<Result>(visitor: LogicVisitor<Result>): Result | null {
        if (visitor.visitFormula) {
            return visitor.visitFormula(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class ImplicationContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public quantifiedExpr(): QuantifiedExprContext {
        return this.getRuleContext(0, QuantifiedExprContext)!;
    }
    public IMPL(): antlr.TerminalNode | null {
        return this.getToken(LogicParser.IMPL, 0);
    }
    public implication(): ImplicationContext | null {
        return this.getRuleContext(0, ImplicationContext);
    }
    public override get ruleIndex(): number {
        return LogicParser.RULE_implication;
    }
    public override enterRule(listener: LogicListener): void {
        if(listener.enterImplication) {
             listener.enterImplication(this);
        }
    }
    public override exitRule(listener: LogicListener): void {
        if(listener.exitImplication) {
             listener.exitImplication(this);
        }
    }
    public override accept<Result>(visitor: LogicVisitor<Result>): Result | null {
        if (visitor.visitImplication) {
            return visitor.visitImplication(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class QuantifiedExprContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public forall(): ForallContext | null {
        return this.getRuleContext(0, ForallContext);
    }
    public exists(): ExistsContext | null {
        return this.getRuleContext(0, ExistsContext);
    }
    public disjunction(): DisjunctionContext | null {
        return this.getRuleContext(0, DisjunctionContext);
    }
    public override get ruleIndex(): number {
        return LogicParser.RULE_quantifiedExpr;
    }
    public override enterRule(listener: LogicListener): void {
        if(listener.enterQuantifiedExpr) {
             listener.enterQuantifiedExpr(this);
        }
    }
    public override exitRule(listener: LogicListener): void {
        if(listener.exitQuantifiedExpr) {
             listener.exitQuantifiedExpr(this);
        }
    }
    public override accept<Result>(visitor: LogicVisitor<Result>): Result | null {
        if (visitor.visitQuantifiedExpr) {
            return visitor.visitQuantifiedExpr(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class ForallContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public FORALL(): antlr.TerminalNode {
        return this.getToken(LogicParser.FORALL, 0)!;
    }
    public variable(): VariableContext {
        return this.getRuleContext(0, VariableContext)!;
    }
    public DOT(): antlr.TerminalNode {
        return this.getToken(LogicParser.DOT, 0)!;
    }
    public quantifiedExpr(): QuantifiedExprContext {
        return this.getRuleContext(0, QuantifiedExprContext)!;
    }
    public override get ruleIndex(): number {
        return LogicParser.RULE_forall;
    }
    public override enterRule(listener: LogicListener): void {
        if(listener.enterForall) {
             listener.enterForall(this);
        }
    }
    public override exitRule(listener: LogicListener): void {
        if(listener.exitForall) {
             listener.exitForall(this);
        }
    }
    public override accept<Result>(visitor: LogicVisitor<Result>): Result | null {
        if (visitor.visitForall) {
            return visitor.visitForall(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class ExistsContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public EXISTS(): antlr.TerminalNode {
        return this.getToken(LogicParser.EXISTS, 0)!;
    }
    public variable(): VariableContext {
        return this.getRuleContext(0, VariableContext)!;
    }
    public DOT(): antlr.TerminalNode {
        return this.getToken(LogicParser.DOT, 0)!;
    }
    public quantifiedExpr(): QuantifiedExprContext {
        return this.getRuleContext(0, QuantifiedExprContext)!;
    }
    public override get ruleIndex(): number {
        return LogicParser.RULE_exists;
    }
    public override enterRule(listener: LogicListener): void {
        if(listener.enterExists) {
             listener.enterExists(this);
        }
    }
    public override exitRule(listener: LogicListener): void {
        if(listener.exitExists) {
             listener.exitExists(this);
        }
    }
    public override accept<Result>(visitor: LogicVisitor<Result>): Result | null {
        if (visitor.visitExists) {
            return visitor.visitExists(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class DisjunctionContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public conjunction(): ConjunctionContext[];
    public conjunction(i: number): ConjunctionContext | null;
    public conjunction(i?: number): ConjunctionContext[] | ConjunctionContext | null {
        if (i === undefined) {
            return this.getRuleContexts(ConjunctionContext);
        }

        return this.getRuleContext(i, ConjunctionContext);
    }
    public OR(): antlr.TerminalNode[];
    public OR(i: number): antlr.TerminalNode | null;
    public OR(i?: number): antlr.TerminalNode | null | antlr.TerminalNode[] {
    	if (i === undefined) {
    		return this.getTokens(LogicParser.OR);
    	} else {
    		return this.getToken(LogicParser.OR, i);
    	}
    }
    public override get ruleIndex(): number {
        return LogicParser.RULE_disjunction;
    }
    public override enterRule(listener: LogicListener): void {
        if(listener.enterDisjunction) {
             listener.enterDisjunction(this);
        }
    }
    public override exitRule(listener: LogicListener): void {
        if(listener.exitDisjunction) {
             listener.exitDisjunction(this);
        }
    }
    public override accept<Result>(visitor: LogicVisitor<Result>): Result | null {
        if (visitor.visitDisjunction) {
            return visitor.visitDisjunction(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class ConjunctionContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public negation(): NegationContext[];
    public negation(i: number): NegationContext | null;
    public negation(i?: number): NegationContext[] | NegationContext | null {
        if (i === undefined) {
            return this.getRuleContexts(NegationContext);
        }

        return this.getRuleContext(i, NegationContext);
    }
    public AND(): antlr.TerminalNode[];
    public AND(i: number): antlr.TerminalNode | null;
    public AND(i?: number): antlr.TerminalNode | null | antlr.TerminalNode[] {
    	if (i === undefined) {
    		return this.getTokens(LogicParser.AND);
    	} else {
    		return this.getToken(LogicParser.AND, i);
    	}
    }
    public override get ruleIndex(): number {
        return LogicParser.RULE_conjunction;
    }
    public override enterRule(listener: LogicListener): void {
        if(listener.enterConjunction) {
             listener.enterConjunction(this);
        }
    }
    public override exitRule(listener: LogicListener): void {
        if(listener.exitConjunction) {
             listener.exitConjunction(this);
        }
    }
    public override accept<Result>(visitor: LogicVisitor<Result>): Result | null {
        if (visitor.visitConjunction) {
            return visitor.visitConjunction(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}

